--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,38 @@
-.App {
+
+
+  h1, h2, h3, h4, h5, h6, nav {
+    font-family: "Mercy", Arial, Helvetica, sans-serif;
+  }
+
+  #root {
+    position: relative;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+
+  main, footer {
+    font-family: "Alegreya", 'Times New Roman', Times, serif;
+  }
+
+  main {
+    padding-bottom: auto;
+    margin-bottom: 2.5rem;
+  }
+
+/* .App {
   text-align: center;
 }
-
 .App-logo {
   height: 40vmin;
   pointer-events: none;
 }
-
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
 }
-
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -23,11 +43,9 @@
   font-size: calc(10px + 2vmin);
   color: white;
 }
-
 .App-link {
   color: #61dafb;
 }
-
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
@@ -35,4 +53,4 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
