cleaning up logs and used prettier

--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,27 @@
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+nav {
+  font-family: "Montserrat", "Times New Roman", Times, serif;
+}
 
+#root {
+  position: relative;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
 
-  h1, h2, h3, h4, h5, h6, nav {
-    font-family: "Mercy", Arial, Helvetica, sans-serif;
-  }
+main,
+footer {
+  font-family: "Montserrat", "Times New Roman", Times, serif;
+}
 
-  #root {
-    position: relative;
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-  }
-
-  main, footer {
-    font-family: "Alegreya", 'Times New Roman', Times, serif;
-  }
-
-  main {
-    padding-bottom: auto;
-    margin-bottom: 2.5rem;
-  }
+main {
+  padding-bottom: auto;
+  margin-bottom: 2.5rem;
+}
