--- a/src/App.css
+++ b/src/App.css
@@ -18,7 +18,7 @@ nav {
 
 main,
 footer {
-  font-family: "Montserrat", "Times New Roman", Times, serif;
+  font-family: "Poppins", Times, serif;
 }
 
 main {
